# emancipated

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
scripts/: create_changelog.py
src/: cli.rs  client.rs  config.rs  image.rs  kp.rs  main.rs  term.rs
src/commands/: accounts.rs  download.rs  manga.rs  mod.rs
src/models/: common.rs  manga.rs  mod.rs  users.rs
